# kopye

./: Cargo.toml  README.md  flake.nix  kopye.toml
.github/workflows/: ci.yml
src/: api.rs  config.rs  errors.rs  lib.rs  main.rs  preview.rs  prompt.rs  source.rs  template.rs  transactions.rs  utils.rs  vfs.rs
tampopo/: Cargo.toml  README.md
tampopo/src/: errors.rs  lib.rs
tests/: integration.rs
thingy/: kopye.toml
thingy/rust/: Cargo.toml.tera  README.md.tera
