[package]
name = "kopye"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "tampopo"]
resolver = "2"

[dependencies]
clap = { version ="4.5.30", features= ["cargo"] }
colored = "3.0.0"
env_logger = "0.11.7"
git2 = "0.20.0"
lazy_static = "1.5.0"
log = "0.4.26"
miette = { version = "7.5.0", features = ["fancy"] }
regex = "1.11.1"
serde = { version ="1.0.2", features = ["derive"] }
tampopo = { path = "./tampopo" }
tempfile = "3.17.1"
tera = "1.20.0"
thiserror = "2.0.11"
toml = "0.8.20"
walkdir = "2.5.0"
inquire = { version = "0.7.5", features = ["editor"] }
indexmap = { version = "2.7.1", features = ["serde"] }


[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3" # TODO: Remove?
